<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">File Transfer 2</string>
    <string name="message">Welcome</string>
    <string name="turnOnBT">Turn On Bluetooth</string>
    <string name="boundDevices">Bounded Devices</string>
    <string name="discoverDevices">Discover Devices</string>
    <string name="makeDiscoverable">Device Discoverable</string>
    <string name="clientSocket">Client (Receive)</string>
    <string name="serverSocket">Server (Send)</string>
    <string name="firstDeviceAddress"> Address of the first Device</string>
    <string name="getFile">Get File</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bound_devices">BoundDevices</string>
    <string name="hello_world">Hello world!</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_activity_file_chooser">FileChooser</string>

</resources>
