<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/message" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turnOnBT"
        android:id="@+id/turnOnBT"
        android:layout_below="@+id/textView"
        android:layout_marginTop="31dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boundDevices"
        android:id="@+id/bondDevices"
        android:layout_below="@+id/turnOnBT"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discoverDevices"
        android:id="@+id/discoverDevices"
        android:layout_below="@+id/bondDevices"
        android:layout_alignRight="@+id/bondDevices"
        android:layout_alignEnd="@+id/bondDevices" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/makeDiscoverable"
        android:id="@+id/makeDiscoverable"
        android:layout_below="@+id/discoverDevices"
        android:layout_alignRight="@+id/discoverDevices"
        android:layout_alignEnd="@+id/discoverDevices" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clientSocket"
        android:id="@+id/client"
        android:layout_below="@+id/discoverDevices"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="69dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_scan"
        android:id="@+id/connectScan"
        android:layout_below="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getFile"
        android:id="@+id/getFile"
        android:layout_below="@+id/client"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serverSocket"
        android:id="@+id/server"
        android:layout_alignTop="@+id/client"
        android:layout_alignLeft="@+id/connectScan"
        android:layout_alignStart="@+id/connectScan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstDeviceAddress"
        android:id="@+id/firstDeviceAddress"
        android:layout_toRightOf="@+id/turnOnBT"
        android:layout_toEndOf="@+id/turnOnBT"
        android:layout_above="@+id/textSend" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/textSend"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/server"
        android:layout_alignStart="@+id/server" />

</RelativeLayout>
